src/pages/registration/registration.style.css
.registration-page {
    height: 100vh;
    background: #2B0909;
}
.registration-two-sides-container {
    display: flex;
    justify-content: space-between;
}


.registration-left-panel {
    width: 50%;
}
.registration-auxiliary-container {
    margin: 12% auto 0 auto;
    width: 360px;

    color: #D4D9E2;
}
.registration-title {
    text-align: center;

    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 800;
    font-size: 30px;
    line-height: 49px;

    background: linear-gradient(90deg, #FFCE76 0%, #E79560 39.57%, #D2644E 65.8%, #BA2B38 88.32%, rgba(17, 0, 0, 0.0677083) 88.33%, #BA2B38 88.34%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}


.registration-sign-in {
    margin: 20px 0;
    display: flex;
    justify-content: center;
}
.registration-text-for-link {
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 30px;

    color: #FFCE76;
}
.registration-button-for-link {
    font-family: 'Montserrat', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 30px;

    cursor: pointer;

    color: #BA2B38;
    background: none;
    border: none;
}

.registration-form-container .custom-input {
    padding-bottom: 15px;
}

.registration-button-sign-in {
    width: 360px;
    height: 50px;
    margin-top: 20px;

    font-family: 'Hind Mandurai', sans-serif;
    font-style: normal;
    font-weight: 700;
    line-height: 12px;

    font-size: 16px;
    cursor: pointer;
    color: #E79560;
    background: #452015;
    border: #452015;
    border-radius: 15px;
}



.registration-right-gradient {
    width: 50%;
    height: 100vh;
    background-image: url('../../icons/LoginGradient.jpg');
    background-repeat: no-repeat;
    background-size: 100%;
}

